--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "eslint": "^8.57.0",
@@ -33,6 +34,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
+    "jsonwebtoken": "^9.0.3",
     "prettier": "^3.2.5",
     "prisma": "^7.2.0",
     "ts-node-dev": "^2.0.0",
